Agregado favicon, arregladas las 2 fotos con extension en mayusculas y descripcion charla Adela

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox-theme.css">
     <link rel="stylesheet" href="bower_components/countdown/jquery.countdown.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
 </head>
 
 <body data-spy="scroll">
@@ -505,7 +506,7 @@
                         <!--div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1"-->
                             <div class="panel-body">
-                                Descripción en breve, pero si te interesa el hardware esta es tu charla ;)
+                                Descripción en breve, pero si te interesa el hardware y los sistemas empotrados en tiempo real, esta es tu charla ;)
                             </div>
                         <!--/div-->
                         <div class="panel-heading">
@@ -652,7 +653,7 @@
                             <h4 class="panel-title">
                                 <!--a class="schedule_expand collapsed" href="#">
                                     <div class="full-width"-->
-                                        Topic: Automatización de pruebas
+                                        La integración continua y el camino al continuous delivery
                                     <!--/div>
                                 </a-->
                             </h4>
@@ -660,7 +661,8 @@
                         <!--div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1"-->
                             <div class="panel-body">
-                                Descripción en breve, pero seguro que te viene bien algo de información sobre cómo testear tu código y aplicaciones, verdad? ;)
+                                Actualmente muchas empresas ya disponen de integración continua en el desarrollo de sus aplicaciones y algunas ya están pensando en ir un paso más allá y llegar al continuous delivery. </br> </br>
+                                En esta charla repasaremos la integración continua, qué es, como aplicarla y sus beneficios. Y veremos el camino necesario para llegar al escenario tan deseado, el continuous delivery, y así conseguir que los desarrollos lleguen a producción de una manera rápida y automatizada. 
                             </div>
                         <!--/div-->
                         <div class="panel-heading">
@@ -1145,12 +1147,12 @@
                             <p class="photo-catagory">
                                 Tecnolog&iacute;a / Eventos
                             </p>
-                            <a class="gallery-item" href="assets/images/photos/photos-9.jpg"
+                            <a class="gallery-item" href="assets/images/photos/photos-9.JPG"
                                data-lightbox-gallery="photos">
                                 <div class="btn btn-default classic-button">ver</div>
                             </a>
                         </div>
-                        <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-9.jpg">
+                        <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-9.JPG">
                     </li>
                     <li class="grid-item grid-item-sm-3">
                         <div class="photo-overlay">
@@ -1160,12 +1162,12 @@
                             <p class="photo-catagory">
                                 Tecnolog&iacute;a / Eventos
                             </p>
-                            <a class="gallery-item" href="assets/images/photos/photos-10.jpg"
+                            <a class="gallery-item" href="assets/images/photos/photos-10.JPG"
                                data-lightbox-gallery="photos">
                                 <div class="btn btn-default classic-button">ver</div>
                             </a>
                         </div>
-                        <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-10.jpg">
+                        <img alt="" class="img-responsive center-block" src="assets/images/photos/photos-10.JPG">
                     </li>
                     <li class="grid-item grid-item-sm-3">
                         <div class="photo-overlay">
