Agregada la informacion de otra ponente y el nuevo sponsor

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="bower_components/nivo-lightbox/nivo-lightbox-theme.css">
     <link rel="stylesheet" href="bower_components/countdown/jquery.countdown.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
+    
 </head>
 
 <body data-spy="scroll">
@@ -256,16 +257,16 @@
             <div class="col-md-4 col-sm-4">
                 <div class="speaker">
                     <figure>
-                        <img alt="" class="img-responsive center-block" src="assets/images/speakers/blank-profile.jpg">
+                        <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-5.jpg">
                     </figure>
                     <h4>Maddalena Molteni</h4>
-                    <p>Head of Development en Artificial Solutions Iberia</p>
-                    <!--ul class="social-block">
-                        <li><a href=""><i class="ion-social-twitter"></i></a></li>
-                        <li><a href=""><i class="ion-social-facebook"></i></a></li>
-                        <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
-                        <li><a href=""><i class="ion-social-googleplus"></i></a></li>
-                    </ul-->
+                    <p>Head of Development en Artificial Solutions</p>
+                    <ul class="social-block">
+                        <!--li><a href=""><i class="ion-social-twitter"></i></a></li>
+                        <li><a href=""><i class="ion-social-facebook"></i></a></li-->
+                        <li><a href="https://es.linkedin.com/in/maddalena-molteni-b0868a11"><i class="ion-social-linkedin-outline"></i></a></li>
+                        <!--li><a href=""><i class="ion-social-googleplus"></i></a></li-->
+                    </ul>
                 </div>
             </div>
         </div>
@@ -528,14 +529,14 @@
                     <div class="schedule_item">
                         <div class="panel-heading">
                             <div class="speakers">
-                                <img src="assets/images/thum_s/s-1.png" alt="speaker" class="thum-s"
+                                <img src="assets/images/thum_s/s-6.jpg" alt="speaker" class="thum-s"
                                      data-toggle="tooltip" data-placement="top" title="--">
                             </div>
                             <div class="time"><span class="ion-clock"></span> 10:50 am</div>
                             <h4 class="panel-title">
                                 <!--a class="schedule_expand collapsed" href="#">
                                     <div class="full-width"-->
-                                        Topic: NLI (interacción a través de lenguaje natural)
+                                        Interacción a través de Lenguaje Natural (NLI)
                                     <!--/div>
                                 </a-->
                             </h4>
@@ -543,7 +544,7 @@
                         <!--div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1"-->
                             <div class="panel-body">
-                                Descripción en breve, pero seguro que te interesará saber más sobre los asistentes personales inteligentes como Siri o Cortana y cómo puede esta tecnología revolucionar el mundo.
+                                Qué es la tecnología del lenguaje? Y más concretamente, qué es la Interacción a través de Lenguaje Natural? Importancia y aplicaciones. Cómo gestionar el desarrollo de una plataforma para el desarrollo de aplicaciones de NLI? Los retos en la gestión de requerimientos y equipos en un entorno de evolución tan rápida.
                             </div>
                         <!--/div-->
                         <div class="panel-heading">
@@ -558,7 +559,8 @@
                         <div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1">
                             <div class="panel-body">
-                                Todavía no disponible
+                                Nacida en Italia, vine a Barcelona en 2001 después de vivir y estudiar en Viena. Apasionada de teatro, danza, escenografía, pero también de idiomas, lingüística y sobre todo comunicación humana, dejé atrás mi anterior vida dedicada al mundo de las artes escénicas, y decidí quedarme en Barcelona, dónde estudié Traducción e Interpretación en la universidad  Pompeu Fabra, dónde tuve mi toma de contacto con la Lingüística Computacional. <br /><br />
+                                En 2005 empecé a trabajar en Artificial Solutions como lingüista computacional, participando en el desarrollo de Asistentes Virtuales y en la creación de recursos lingüísticos en varios idiomas. Al cabo de unos años pasé a ser primero responsable de proyectos, principalmente Asistentes Virtuales en varios ámbitos, para finalmente pasar al departamento de R&amp;D, dónde creé el departamento de control de calidad y dónde, desde hace casi 3 años, soy responsable del desarrollo de Teneo, la plataforma que permite el desarrollo de soluciones NLI (Natural Language Interaction).  
                             </div>
                         </div>
                     </div>
@@ -941,6 +943,10 @@
                 </div>
                 <div class="col-md-4">
                     <img src="assets/images/sponsor/s-3.png" alt="" class="img-responsive">
+                <!--<h5 class="sponsor-caption">Silver Sponsorship</h5> -->
+                </div>
+                <div class="col-md-2">
+                    <img src="assets/images/sponsor/s-4.png" alt="" class="img-responsive">
                 <!--<h5 class="sponsor-caption">Silver Sponsorship</h5> -->
                 </div>
             </div>
