Agregada la info sobre una ponente y la descripcion de su charla

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                     <h3 class="section-title">Qu&eacute; es Women Techmakers</h3>
 
-                    <p>Women Techmakers es una iniciativa liderada por Google que desde 2014 est&aacute; lanzando iniciativas a nivel mundial para apoyar y potenciar a las mujeres en la industria.</br>Con motivo del D&iacute;a Internacional de la Mujer promueve durante el mes de marzo diferentes eventos alrededor del mundo con el objetivo de dar el protagonismo que merecen las mujeres que se dedican al &aacute;mbito tecnol&oacute;gico y que en un futuro no sean consideradas una rareza.</br>Los eventos contar&aacute;n con charlas t&eacute;cnicas, mesas redondas, talleres pr&aacute;cticos, oportunidades de establecer contactos, y m&aacute;s.</p>
+                    <p>El Women Techmakers es una iniciativa de Google a nivel mundial que tiene el objetivo de dar visibilidad y potenciar a las mujeres en sectores que aún están mayoritariamente ocupados por hombres, como son las ciencias, la tecnología, las ingenierías y las matemáticas.</br>Con motivo del D&iacute;a Internacional de la Mujer promueve durante el mes de marzo diferentes eventos alrededor del mundo.</br>Los eventos contar&aacute;n con charlas t&eacute;cnicas, mesas redondas, talleres pr&aacute;cticos, oportunidades de establecer contactos, y m&aacute;s.</p>
                     <figure>
                         <img alt="" class="img-responsive" src="assets/images/about-us.jpg">
                     </figure>
@@ -241,7 +241,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="speaker">
                     <figure>
-                        <img alt="" class="img-responsive center-block" src="assets/images/speakers/blank-profile.jpg">
+                        <img alt="" class="img-responsive center-block" src="assets/images/speakers/speaker-6.jpg">
                     </figure>
                     <h4>Dra. M.&Agrave;ngels Moncusí</h4>
                     <p>Profesora del Departamento de Informática y Matemáticas de la URV</p>
@@ -492,14 +492,14 @@
                     <div class="schedule_item">
                         <div class="panel-heading">
                             <div class="speakers">
-                                <img src="assets/images/thum_s/s-1.png" alt="speaker" class="thum-s"
+                                <img src="assets/images/thum_s/s-7.jpg" alt="speaker" class="thum-s"
                                      data-toggle="tooltip" data-placement="top" title="--">
                             </div>
                             <div class="time"><span class="ion-clock"></span> 10:05 am</div>
                             <h4 class="panel-title">
                                 <!--a class="schedule_expand collapsed" href="#">
                                     <div class="full-width"-->
-                                       Topic: Arduino y Raspberry Pi
+                                       Interaccionem amb el món, disenyem i programem!
                                     <!--/div>
                                 </a-->
                             </h4>
@@ -507,7 +507,8 @@
                         <!--div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1"-->
                             <div class="panel-body">
-                                Descripción en breve, pero si te interesa el hardware y los sistemas empotrados en tiempo real, esta es tu charla ;)
+                                Vivimos en un mundo cambiante, donde la gente ya no tiene miedo de programar, pero el uso de la electrónica aún los frena. Los sistemas Arduino han simplificado el uso de esta, por lo que con unos pocos sensores conectados a una placa Arduino podemos escuchar/ver el mundo, el microprocesador incorporado a las placas, procesarán esta información y sacarán unos resultados que irán a unos actuadores que interferirán con el mundo observado. <br /><br />
+                                Los sistemas empotrados en tiempo real, son sistemas con limitaciones en el uso de memoria y del tiempo de computación y donde además necesitamos sacar los resultados en un tiempo máximo. Introduciremos diferentes sistemas Arduino, sensores y actuadores, finalizando con la interconexión del arduino con placas Raspberry Pi, que ya disponen de la potencia de cálculo de un ordenador estándar, formando un sistema de tiempo real completo.
                             </div>
                         <!--/div-->
                         <div class="panel-heading">
@@ -522,7 +523,8 @@
                         <div class="panel-collapse collapse" role="tabpanel"
                              aria-labelledby="heading-1">
                             <div class="panel-body">
-                                Todavía no disponible
+                                Doctora en Informática por la Universitat Politècnica de Catalunya, la tesis fue sobre ahorro energético en sistemas de tiempo real. Actualmente estoy en el departamento de Ingeniería Informática y Matemáticas de la Universitat Rovira i Virgili. Pertenezco al grupo de investigación: Alephsys - Algorithms Embedded in Physical Systems. <br /><br />
+                                Hace más de 20 años que estoy impartiendo docencia de sistemas operativos y de sistemas de tiempo real. Desde hace unos años soy una apasionada de los sistemas Arduino y más recientemente de la Raspberry Pi. Hace un par de años hemos introducido estas dos plataformas a las prácticas de la asignatura de sistemas en tiempo real con un gran éxito por parte de los alumnos.
                             </div>
                         </div>
                     </div>
