Añadido enlace a la edición 2015

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#location">Lugar</a></li>
                 <li><a href="#photos">Fotos</a></li>
-
+                <li><a href="http://womentechmakers.smart4cities.net/">Edición 2015</a></li>
             </ul>
         </div>
     </div><!-- /.container -->
